Fixes some spacing errors and an issue with the dropdown

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,7 @@
 }
 
     html, body {
-        background-color: #808080;
+        background-color: #fff;
         color: #1F7843;
         font-family: 'Open Sans', sans-serif;
         font-weight: 200;
@@ -116,19 +116,21 @@
       min-width: 100%;
       height: auto;
       background-color: #CACACC;
+      border: 2px solid #1F7843;
     }
 
     .alertcontent {
       min-width: 100%;
       height: auto;
       background-color: #CACACC;
-      overflow: hidden;
+      border: 2px solid #1F7843;
     }
 
     .favcontactscontent {
       min-width: 100%;
       height: auto;
       background-color: #CACACC;
+      border: 2px solid #1F7843;
     }
 
     .homeheadings {
